samples/_failures_safe/1761563768_c9d528_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad1066cc.c: In function ‘main’:
./samples/SAFE/__tmp_ad1066cc.c:136:5: error: expected expression at end of input
  136 |     read_matrix(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_ad1066cc.c:136:5: error: too few arguments to function ‘read_matrix’
./samples/SAFE/__tmp_ad1066cc.c:40:6: note: declared here
   40 | void read_matrix(Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~
./samples/SAFE/__tmp_ad1066cc.c:136:5: error: expected declaration or statement at end of input
  136 |     read_matrix(&
      |     ^~~~~~~~~~~
